# bevy_ascii_terminal

./: Cargo.toml  README.md
examples/: align_string.rs  font_change.rs  hello_world.rs  stress_test.rs
src/: entity.rs  lib.rs  terminal.rs  to_world.rs
src/formatting/: fmt_string.rs  fmt_tile.rs
src/renderer/: entity.rs  font.rs  material.rs  mesh_data.rs  terminal.wgsl  uv_mapping.rs
