[package]
authors = ["sark"]
description = "A simple terminal for rendering ascii in bevy."
edition = "2021"
exclude = ["images/*"]
homepage = "https://github.com/sarkahn/bevy_ascii_terminal"
keywords = ["bevy", "ascii", "terminal", "roguelike", "tilemap"]
license = "MIT"
name = "bevy_ascii_terminal"
readme = "README.md"
repository = "https://github.com/sarkahn/bevy_ascii_terminal"
version = "0.15.3"

[dependencies]
bitflags = "2.4.0"
arrayvec = "0.7.2"
bevy_tiled_camera = { git = "https://github.com/materialcontext/bevy_tiled_camera.git", version = "0.9.1", optional = true }
sark_grids = { git = "https://github.com/materialcontext/sark_grids_rs.git", version = "0.5.9" }

[dependencies.bevy]
version = "0.14.1"

[dev-dependencies]
bevy_tiled_camera = { git = "https://github.com/materialcontext/bevy_tiled_camera.git", version = "0.9.1" }
bracket-noise = "0.8.2"
bracket-random = "0.8.2"
rand = "0.8.4"

[dev-dependencies.bevy]
version = "0.14.1"

[target.'cfg(unix)'.dev-dependencies.bevy]
version = "0.14.1"

[features]
default = ["camera"]
camera = ["dep:bevy_tiled_camera"]
dev = ["bevy/dynamic_linking"]
